@@ -1,11 +1,14 @@
 man_MANS = \
+	automated_run_tests.3 \
 	add_test_case.3 \
 	add_test_group.3 \
 	ASSERT.3 \
+	automated_run_tests.3 \
 	cleanup_registry.3 \
 	console_run_tests.3 \
 	curses_run_tests.3 \
 	get_error.3 \
 	get_registry.3 \
 	initialize_registry.3 \
+	set_output_filename.3 \
 	set_registry.3 
